--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -6,12 +6,8 @@
   "permissions": ["scripting", "tabs"],
   "host_permissions": ["https://web.whatsapp.com/*"],
   "action": {
-    "default_popup": "popup.html",
-    "default_icon": {
-      "16": "icon16.png",
-      "48": "icon48.png",
-      "128": "icon128.png"
-    }
+    "default_popup": "popup.html"
+    
   },
   "background": {
     "service_worker": "background.js"
